--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
@@ -17,7 +17,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-paginate": "^8.3.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
